general layout, mailchimp form, sting info and bg elements

--- a/src/theme.config
+++ b/src/theme.config
@@ -28,7 +28,7 @@
 @header     : 'default';
 @icon       : 'default';
 @image      : 'default';
-@input      : 'default';
+@input      : 'string';
 @label      : 'default';
 @list       : 'default';
 @loader     : 'default';
